--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,13 @@ body {
      font-family: 'Slabo 27px', serif;
      line-height: 1.5;
      letter-spacing: 1.4;
-     background-color: var(--background-color);
+     background-color: var(--house-bg-color);
 }
 
 .logo-section {
      width: 100%;
      height: 100vh;
-     background: url(./assets/city.svg);
+     background: #1D1C33 url(./assets/city.svg);
      background-position: center;
      background-size: cover;
      background-repeat: no-repeat;
@@ -77,6 +77,11 @@ body {
      color: var(--background-color);
      font-weight: 600;
      box-shadow: var(--box-shadow);
+}
+
+.home-section {
+     width: 100%;
+     height: 100vh;
 }
 
 @media screen and (max-width: 600px) {
