--- a/src/layouts/navbar/nav.css
+++ b/src/layouts/navbar/nav.css
@@ -3,8 +3,12 @@
      justify-content: space-between;
      align-items: center;
      background-color: var(--background-color);
-     padding: 2rem;
+     padding: 1.5rem;
      border-radius: 0 0 3rem 3rem;
+     top: 0;
+     left: 0;
+     width: 100%;
+     position: fixed;
 }
 
 .nav-menu {
@@ -28,13 +32,118 @@
      text-shadow: 1px 1px 2px #BAE8E8;
 }
 
-.nav-items:hover {
+.nav-items {
    background-color: var(--nav-color);
-   border-radius: 5px;
+   border-radius: 3rem;
+   padding: .3rem .3rem;
+   width: 80px;
+   text-align: center;
+   box-shadow: var(--box-shadow);
+   color: var(--text-color);
 }
 
 .nav-link {
      text-decoration: none;
      font-size: 1.2rem;
      color: var(--text-color);
+}
+
+.active {
+   background-color: var(--btn-color);
+   color: #000;
+   border-radius: 3rem;
+   padding: .3rem .3rem;
+   width: 80px;
+   text-align: center;
+   box-shadow: var(--box-shadow);
+}
+
+.signup-btn {
+     padding: .3rem .8rem;
+     background-color: var(--nav-color);
+     color: var(--text-color);
+     border-radius: 0 .5rem .5rem 1rem;
+}
+
+.mobile {
+     display: none;
+}
+
+@media screen and (max-width: 600px) {
+     .navbar {
+          flex-direction: column;
+          gap: 1rem;
+          align-items: center;
+          padding: 2.5rem;
+     }
+
+     .desktop {
+          display: none;
+     }
+     .mobile {
+          display: block;
+     }
+
+     .mobile-nav-menu {
+          display: flex;
+          gap: .7rem;
+          align-items: center;
+          margin-right: .7rem;
+          margin-top: .7rem;
+     }
+
+     .search_input {
+          display: block;
+          width: 100%;
+          border-radius: .375rem;
+          border: 1px solid #E5E7EB;
+          background-color: #BAE8E8;
+          color: #fff;
+          padding-top: .825rem;
+          padding-bottom: .825rem;
+          padding-left: 3.5rem;
+          padding-right: 4rem;
+          font-size:  1.2rem;
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+          outline: none;
+          transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        }
+        
+        .search_input:focus {
+          border-color: #000000;
+          box-shadow: none;
+        }
+
+        .footer_nav {
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          position: fixed;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 1rem;
+          background: var(--background-color);
+        }
+
+        .footer_nav_item {
+          margin-inline: 1rem;
+        }
+
+        .footer_nav_link{
+          font-size: 1.4rem;
+          color: var(--text-color);
+        }
+
+        .plus {
+          font-size: 2rem;
+          color: var(--text-color);
+          border-radius: 50%;
+          padding: 1.5rem;
+          background-color: var(--nav-color);
+          width: 150px;
+          height: 150px;
+        }
+        
+     
 }
