--- a/src/index.css
+++ b/src/index.css
@@ -160,4 +160,12 @@ body {
           font-size: 1.1rem;
           margin-bottom: 1rem;
      }
+
+     .signup-section {
+          flex-direction: column;
+          width: 100%;
+          margin-top: 10rem;
+          gap: 0;
+          margin-inline: .5rem;
+     }
 }
